# korben

./: .gitignore  LICENSE  README.md  korben.py  korben.sh  pyproject.toml  run.py
config/: README.md  core.yml.example  podcasts.yml.example  workers.py
deployments/: README.md  __init__.py  cloud_all.py  prefect_cloud.py  run_local.py
docs/: ARCHITECTURE.md  PLUGINS.md
src/: registry.py
src/core/: registry.py
src/core/flows/: __init__.py  mallory_stories.py  podcasts.py
src/core/tasks/: __init__.py  cybernews.py  download_podcasts.py  entropy.py  extract_wisdom.py  fetch_mallory_stories.py  get_mallory_stories.py  markdown_to_html.py  podcasts.py  read_file.py  send_email.py  send_slack_hook.py  transcribe_podcasts.py  write_file.py
src/plugins/: __init__.py
src/plugins/arxiv/: README.md  __init__.py  config.yml.example  flows.py  lib.py  tasks.py
src/plugins/aws_s3/: README.md  __init__.py  config.yml.example  tasks.py
src/plugins/books/: README.md  __init__.py  config.yml.example  flows.py  tasks.py
src/plugins/email/: README.md  __init__.py  config.yml.example  tasks.py
src/plugins/emergent_mind/: README.md  __init__.py
src/plugins/github/: README.md  __init__.py  config.yml.example  lib.py  tasks.py
src/plugins/google_calendar/: README.md  __init__.py  config.yml  config.yml.example  lib.py  tasks.py
src/plugins/linear/: INSTALLATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  config.yml.example  flows.py  lib.py  tasks.py
src/plugins/mallory/: README.md  __init__.py  config.yml.example  flows.py  tasks.py
(+47 files in other folders)
