[project]
name = "core"
version = "0.1.0"
description = "personal agentic automation made easy"
authors = [
    {name = "Jonathan Cran", email = "jcran@korben.ai"},
]
dependencies = [
    "controlflow",
    "prefect",
    "requests",
    "getpodcast",
    "pyyaml",
    "lxml",
    "markdown",
    "google-api-python-client",
    "google-auth",
    "boto3",
    "torch<3.0,>=2.3",
    "openai-whisper>=20250625",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
